# Volo

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.claude/agents/: app-dev.md  architect.md  engine-dev.md  planner.md  qa.md
.claude/skills/volo-app-dev/: SKILL.md
.claude/skills/volo-architecture/: SKILL.md
.claude/skills/volo-architecture/references/: data-model.md
.claude/skills/volo-build/: SKILL.md
.claude/skills/volo-engine-dev/: SKILL.md
.claude/skills/volo-engine-dev/references/: subtitle-domain.md
.claude/skills/volo-qa/: SKILL.md
.claude/skills/volo-qa/references/: boundary-checks.md
.claude/skills/volo-spec/: SKILL.md
.github/workflows/: release.yml
_workspace/: 02_architect_summary.md  QA_report.md
assets/presets/: default.json  interview.json  youtube.json
docs/: ARCHITECTURE.md  PRD.md
packaging/: volo-onefile.spec  volo.spec  volo_cli_launcher.py  volo_launcher.py
tests/: conftest.py  test_audio.py  test_export.py  test_progress.py  test_segment.py  test_transcribe.py
volo_app/: __init__.py  __main__.py  main_window.py  worker.py
volo_cli/: __init__.py  __main__.py
volo_engine/: __init__.py  audio.py  config.py  correct.py  errors.py  export.py  models.py  pipeline.py  segment.py  style.py  transcribe.py  translate.py
